Changed Width & Style Changes

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     </a>
                     <a href="https://StackExchange.com">
                         <img src="https://StackExchange.com/favicon.ico" alt="StackExchange">
-                        <span>Stack Ex</span>
+                        <span>StackExchange</span>
                     </a>
                     <a href="https://dillinger.io">
                         <img src="Favicons/Dillinger.ico" alt="Dillinger">
