--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 
 <body class="nojs">
-    <div id="top-header">
         <div id="memes">
             <script type="text/javascript">
                 var phrases = [
@@ -50,7 +49,7 @@
             <br>
             <div id="currentTime"></div>
             <div id="date">
-                <p class="date"><span id="d"></span> <span id="m"></span> <span id="y"></span></p>
+            <div class="date"><span id="d"></span> <span id="m"></span> <span id="y"></span></div>
             </div>
         </div>
     </div>
