Changed HTTPS to HTTP For One Entry

--- a/index.html
+++ b/index.html
@@ -244,8 +244,8 @@
                         <img src="https://hunter.io/favicon.ico" alt="Hunter">
                         <span>Find Company Employee Email</span>
                     </a>
-                    <a href="https://palined.com/search">
-                        <img src="https://palined.com/favicon.ico" alt="Google Open Directory Search">
+                    <a href="http://palined.com/search">
+                        <img src="http://palined.com/favicon.ico" alt="Google Open Directory Search">
                         <span>Google Open Directory Search</span>
                     </a>
                 </nav>
