Changed Icon Paths

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <h1>Personal</h1>
                 <nav>
                     <a href="https://www.twitter.com">
-                        <img src="https://www.twitter.com/favicon.ico" alt="Twitter">
+                        <img src="Favicons/twitter.ico" alt="Twitter">
                         <span>Twitter</span>
                     </a>
                     <a href="https://github.com">
@@ -77,7 +77,7 @@
                         <span>YouTube</span>
                     </a>
                     <a href="https://www.linkedin.com">
-                        <img src="https://linkedin.com/favicon.ico" alt="LinkedIn">
+                        <img src="Favicons/linkedin.ico" alt="LinkedIn">
                         <span>LinkedIn</span>
                     </a>
                     <a href="https://open.spotify.com">
