Cleared Up Layout

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body class="nojs">
     <div id="memes">
+<!-- Meme Script at the top-->
         <script type="text/javascript">
             var phrases = [
                 'Powered By Dark Blockchain™',
@@ -47,6 +48,7 @@
                 meme);
         </script>
         <br><br>
+<!-- Date & Time-->
         <div id="currentTime"></div>
         <div id="date">
             <div class="date"><span id="d"></span> <span id="m"></span> <span id="y"></span></div>
@@ -59,7 +61,7 @@
         </form>
     </header>
     <main>
-
+<!-- Personal Section-->
         <section>
             <div class="shadow-box nav-wrapper">
                 <h1>Personal</h1>
@@ -91,7 +93,9 @@
                 </nav>
             </div>
         </section>
+<!-- Personal Section End-->
 
+<!-- Information Section-->
         <section>
             <div class="shadow-box nav-wrapper">
                 <h1>Information & Wikis</h1>
@@ -127,7 +131,9 @@
                 </nav>
             </div>
         </section>
+<!-- Information Section End-->
 
+<!-- Communication Section-->
         <section>
             <div class="shadow-box nav-wrapper">
                 <h1>Communication</h1>
@@ -151,7 +157,9 @@
                 </nav>
             </div>
         </section>
+<!-- communication Section End-->
 
+<!-- University Section-->
         <section>
             <div class="shadow-box nav-wrapper">
                 <h1>University Links</h1>
@@ -183,7 +191,9 @@
                 </nav>
             </div>
         </section>
+<!-- University Section End-->
 
+<!-- News Section-->
         <section>
             <div class="shadow-box nav-wrapper">
                 <h1>News</h1>
@@ -211,7 +221,9 @@
                 </nav>
             </div>
         </section>
+<!-- News Section End-->
 
+<!-- Inforsec Section-->
         <section>
             <div class="shadow-box nav-wrapper">
                 <h1>InfoSec</h1>
@@ -251,6 +263,8 @@
                 </nav>
             </div>
         </section>
+<!-- Infosec Section End-->
+
     </main>
 
     <script src="index.js"></script>
