--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <br>
     <header id="sticky-header">
         <form class="shadow-box" method="GET" action="https://ddg.gg/" autocomplete="off">
-            <input id="searchbox" type="text" name="q" placeholder="Search DuckDuckGo, the Superior Search Engine">
+            <input id="searchbox" type="text" name="q" placeholder="Search DuckDuckGo, the Superior Search Engine" autofocus>
         </form>
     </header>
     <main>
@@ -268,6 +268,7 @@
     </main>
 
     <script src="index.js"></script>
+
 </body>
 
 </html>
