Changed Open Directory Provider

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         </section>
 <!-- News Section End-->
 
-<!-- Inforsec Section-->
+<!-- Infosec Section-->
         <section>
             <div class="shadow-box nav-wrapper">
                 <h1>InfoSec</h1>
@@ -256,9 +256,9 @@
                         <img src="https://hunter.io/favicon.ico" alt="Hunter">
                         <span>Find Company Employee Email</span>
                     </a>
-                    <a href="http://palined.com/search">
-                        <img src="http://palined.com/favicon.ico" alt="Google Open Directory Search">
-                        <span>Google Open Directory Search</span>
+                    <a href="https://cgs.the-eye.eu/">
+                        <img src="https://the-eye.eu/favicon.ico" alt="Open Directory Search">
+                        <span>Open Directory Search</span>
                     </a>
                 </nav>
             </div>
