Added Digital Ocean

--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
                         <img src="https://youtube.com/favicon.ico" alt="YouTube">
                         <span>YouTube</span>
                     </a>
+                    <a href="https://cloud.digitalocean.com/login">
+                        <img src="https://digitalocean.com/favicon.ico" alt="LinkedIn">
+                        <span>Digital Ocean</span>
+                    </a>
                     <a href="https://www.linkedin.com">
                         <img src="Favicons/linkedin.ico" alt="LinkedIn">
                         <span>LinkedIn</span>
