Changed A Single Meme

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 'msfconsole',
                 'Give Me My Second Monitor Back, Cowards',
                 'YEEEEEET',
-                'iFunny.co 😂😂 ',
+                '😂 iFunny.co 😂 ',
                 'YOU´RE Breathtaking!',
                 'If You Don´t Play The Craft, You Don´t Get The Shaft™',
                 'Life Sucks, But It Doesn´t Swallow'
