--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>There´s no place like ~/</title>
 </head>
-
+<canvas class="background"></canvas>
 <body class="nojs">
     <br>
     <div id="memes">
@@ -271,7 +271,7 @@
 <!-- Infosec Section End-->
 
     </main>
-
+    <script src="particles.min.js"></script>
     <script src="index.js"></script>
 
 </body>
