Changed Colours & Memez

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <script type="text/javascript">
             var phrases = [
                 'Powered By Dark Blockchain™',
-                'On The Outside I´m "$USER", But On The Inside I´m /dev/null 😔😢😔',
+                'On The Outside I´m $USER, But On The Inside I´m /dev/null 😔😢😔',
                 'Welcome To My Crybbb 😎😎😎',
                 'ǝʌᴉ˥ o┴ spuoɔǝS ǝɹǝW ǝʌɐH noλ',
                 'Don´t Dog The Boys - Ghandi',
