Changed Canvas & Background & Particle Colours

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>There´s no place like ~/</title>
 </head>
-<canvas class="background"></canvas>
-<body class="nojs">
+
+<script src="particles.min.js"></script>
+<canvas class="particles"></canvas>
+
+<body>
+<div class="top">
     <br>
     <div id="memes">
 <!-- Meme Script at the top-->
@@ -61,6 +65,7 @@
             <input id="searchbox" type="text" name="q" placeholder="Search DuckDuckGo, the Superior Search Engine" autofocus>
         </form>
     </header>
+</div>
     <main>
 <!-- Personal Section-->
         <section>
@@ -271,7 +276,6 @@
 <!-- Infosec Section End-->
 
     </main>
-    <script src="particles.min.js"></script>
     <script src="index.js"></script>
 
 </body>
