--- a/index.html
+++ b/index.html
@@ -3,14 +3,25 @@
 
 <head>
     <link rel="shortcut icon" type="image/png" href="favicon.png">
-    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack.css'>
     <link rel="stylesheet" href="style.css" />
+    <link rel="bubbly-bg"
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>There´s no place like ~/</title>
+    <title>Welcome to my Website</title>
 </head>
 
-<script src="particles.min.js"></script>
-<canvas class="particles"></canvas>
+<script src="bubbly-bg.js"></script>
+<div id="background-wrap">
+    <div class="bubble x1"></div>
+    <div class="bubble x2"></div>
+    <div class="bubble x3"></div>
+    <div class="bubble x4"></div>
+    <div class="bubble x5"></div>
+    <div class="bubble x6"></div>
+    <div class="bubble x7"></div>
+    <div class="bubble x8"></div>
+    <div class="bubble x9"></div>
+    <div class="bubble x10"></div>
+</div>
 
 <body>
 <div class="top">
@@ -19,31 +30,14 @@
 <!-- Meme Script at the top-->
         <script type="text/javascript">
             var phrases = [
-                'Powered By Dark Blockchain™',
-                'On The Outside I´m $USER, But On The Inside I´m /dev/null 😔😢😔',
-                'Welcome To My Crybbb 😎😎😎',
-                'ǝʌᴉ˥ o┴ spuoɔǝS ǝɹǝW ǝʌɐH noλ',
-                'Don´t Dog The Boys - Ghandi',
-                'There´s No Place Like ~/',
-                'Follow Me On Twitter @UpperCenter',
-                'Ping 1.1.1.1 | lolcat',
-                'I Put The "Sigh" In Cyber',
-                'How To: Piss Off Every Designer Ever - www.userinyerface.com',
-                '"Technology Is Not A Panacea"',
-                '"Eternal Vigilance Is The Price Of Security"',
-                'btw i use Arch',
-                'POG',
-                'KYS Before You Snort That Ajax, Skid',
-                'Buy My Bath Water, Now Only £299.99!',
-                '/weather clear',
-                '"Bebian Is The Most Secure OS" - Aristotle',
-                'msfconsole',
-                'Give Me My Second Monitor Back, Cowards',
-                'YEEEEEET',
-                '😂 iFunny.co 😂 ',
-                'YOU´RE Breathtaking!',
-                'If You Don´t Play The Craft, You Don´t Get The Shaft™',
-                'Life Sucks, But It Doesn´t Swallow'
+                'Welcome to my Website',
+                'YEET',
+                'Dabtastic',
+                'Love is trash, bitches need cash - Gandhi',
+                'There`s No Place like 127.0.0.1',
+                'Were we dropping bois - Moses'
+
+                
             ];
 
             var scripts = document.getElementsByTagName('script');
@@ -60,9 +54,16 @@
         </div>
     </div>
     <br>
+
+    <a class="weatherwidget-io" href="https://forecast7.com/en/51d58n3d00/newport/" data-label_1="NEWPORT" data-label_2="WEATHER" data-theme="original" >NEWPORT WEATHER</a>
+    <script>
+    !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+    </script>
+ <!-- start feedwind code --> <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="119077/"></script> <!-- end feedwind code --> 
+
     <header id="sticky-header">
         <form class="shadow-box" method="GET" action="https://ddg.gg/" autocomplete="off">
-            <input id="searchbox" type="text" name="q" placeholder="Search DuckDuckGo, the Superior Search Engine" autofocus>
+            <input id="searchbox" type="text" name="q" placeholder="Search DuckDuckGo, the exceptional Search Engine" autofocus>
         </form>
     </header>
 </div>
@@ -105,43 +106,6 @@
         </section>
 <!-- Personal Section End-->
 
-<!-- Information Section-->
-        <section>
-            <div class="shadow-box nav-wrapper">
-                <h1>Information & Wikis</h1>
-                <nav>
-                    <a href="https://www.coinlib.io">
-                        <img src="Favicons/coinlib.png" alt="Coinlib">
-                        <span>Coinlib</span>
-                    </a>
-                    <a href="https://StackExchange.com">
-                        <img src="https://StackExchange.com/favicon.ico" alt="StackExchange">
-                        <span>StackExchange</span>
-                    </a>
-                    <a href="https://dillinger.io">
-                        <img src="Favicons/Dillinger.ico" alt="Dillinger">
-                        <span>Dillinger Markdown</span>
-                    </a>
-                    <a href="https://wiki.archlinux.org">
-                        <img src="https://wiki.archlinux.org/favicon.ico" alt="ArchWiki">
-                        <span>ArchWiki</span>
-                    </a>
-                    <a href="https://datadrifter.xyz">
-                        <img src="https://datadrifter.xyz/favicon.ico" alt="DataDrifter">
-                        <span>DataDrifter</span>
-                    </a>
-                    <a href="https://github.com/sbilly/awesome-security">
-                        <img src="https://github.com/favicon.ico" alt="Security">
-                        <span>Awesome Security</span>
-                    </a>
-                    <a href="https://legislation.gov.uk">
-                        <img src="https://legislation.gov.uk/favicon.ico" alt="UK Legislation">
-                        <span>UK Legislation</span>
-                    </a>
-                </nav>
-            </div>
-        </section>
-<!-- Information Section End-->
 
 <!-- Communication Section-->
         <section>
