--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
                         <img src="https://www.twitch.tv/favicon.ico" alt="Twitch">
                         <span>Twitch</span>
                     </a>
+                       
+                    </a>
                 </nav>
             </div>
         </section>
@@ -131,6 +133,14 @@
                     <a href="https://outlook.office365.com/mail/inbox">
                         <img src="https://is3-ssl.mzstatic.com/image/thumb/Purple113/v4/db/d3/5c/dbd35c33-20cc-cc9a-d496-5c0d32883519/Outlook.png/1200x630bb.png" alt="Uni Outlook">
                         <span>Uni Outlook</span>
+                    </a>
+                   <a href="https://www.facebook.com/">
+                        <img src="https://www.facebook.com/favicon.ico" alt="Facebook">
+                        <span>Facebook</span>
+                    </a>
+                    <a href="https://www.messenger.com">
+                        <img src="https://static.xx.fbcdn.net/rsrc.php/yg/r/4_vfHVmZ5XD.ico" alt="Messanger">
+                        <span>Messenger</span>
                     </a>
                 </nav>
             </div>
