--- a/index.html
+++ b/index.html
@@ -30,12 +30,20 @@
 <!-- Meme Script at the top-->
         <script type="text/javascript">
             var phrases = [
-                'Welcome to my Website',
                 'YEET',
                 'Dabtastic',
                 'Love is trash, bitches need cash - Gandhi',
                 'There`s No Place like 127.0.0.1',
-                'Were we dropping bois - Moses'
+                'Were we dropping bois - Moses',
+                'Cash Me Ousside',
+                'By my homemade toilet wine only £299.99',
+                'AltaVista is a beast - JK',
+                'Do as i say, not as i do - Jesus',
+                'Whose coat is that jacket - Bob'
+                
+
+
+
 
                 
             ];
@@ -117,10 +125,6 @@
                     <a href="https://web.telegram.org">
                         <img src="https://web.telegram.org/favicon.ico" alt="Telegram">
                         <span>Telegram</span>
-                    </a>
-                    <a href="https://pro1.mail.ovh.net">
-                        <img src="https://www.ovh.co.uk/favicon.ico" alt="Webmail">
-                        <span>OVH Webmail</span>
                     </a>
                     <a href="https://web.whatsapp.com">
                         <img src="https://web.whatsapp.com/favicon.ico" alt="WhatsApp">
