--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
                 'By my homemade toilet wine only £299.99',
                 'AltaVista is a beast - JK',
                 'Do as i say, not as i do - Jesus',
-                'Whose coat is that jacket - Bob'
-                
+                'Whose coat is that jacket - Bob',
+                'When life gives you lemmons throw them at someone - Rosa Parks',
+
 
 
 
