--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 'AltaVista is a beast - JK',
                 'Do as i say, not as i do - Jesus',
                 'Whose coat is that jacket - Bob',
-                'When life gives you lemmons throw them at someone - Rosa Parks',
+                'When life gives you lemmons throw them at someone - Rosa',
 
 
 
