--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         <img src="https://drive.google.com/favicon.ico" alt="Google Drive">
                         <span>Google Drive</span>
                     </a>
-                    <a href="https://uppercenter.github.io/Psychic-Telegram/usw.pdf">
+                    <a href="https://fistydan29.github.io/luvtech/usw.pdf">
                         <img src="Favicons/usw.png" alt="Referencing Guide">
                         <span>USW Referencing Guide</span>
                     </a>
