--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="bubbly-bg"
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Welcome to my Website</title>
+    <title>DBubbled</title>
 </head>
 
 <script src="bubbly-bg.js"></script>
@@ -16,11 +16,6 @@
     <div class="bubble x3"></div>
     <div class="bubble x4"></div>
     <div class="bubble x5"></div>
-    <div class="bubble x6"></div>
-    <div class="bubble x7"></div>
-    <div class="bubble x8"></div>
-    <div class="bubble x9"></div>
-    <div class="bubble x10"></div>
 </div>
 
 <body>
@@ -68,7 +63,6 @@
     <script>
     !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
     </script>
- <!-- start feedwind code --> <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="119077/"></script> <!-- end feedwind code --> 
 
     <header id="sticky-header">
         <form class="shadow-box" method="GET" action="https://ddg.gg/" autocomplete="off">
