--- a/index.html
+++ b/index.html
@@ -18,6 +18,64 @@
     <div class="bubble x5"></div>
 </div>
 
+
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+.dropbtn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
+</style>
+</head>
+<body>
+
+
+<div class="dropdown">
+  <button class="dropbtn">Hover Over Me</button>
+  <div class="dropdown-content">
+    <a href="#">Dark Mode</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+  </div>
+</div>
+
+</body>
+</html>
+
+
+
 <body>
 <div class="top">
     <br>
@@ -35,7 +93,7 @@
                 'AltaVista is a beast - JK',
                 'Do as i say, not as i do - Jesus',
                 'Whose coat is that jacket - Bob',
-                'When life gives you lemmons throw them at someone - Rosa',
+                'When life gives you lemons throw them at someone - Rosa',
 
 
 
@@ -255,6 +313,7 @@
             </div>
         </section>
 <!-- Infosec Section End-->
+
 
     </main>
     <script src="index.js"></script>
