--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html>
-
+        <style>
+                .night{
+                    background: black;
+                    color :white;
+                }
+                .day{
+                    background: white;
+                    color: black;
+                }
+            </style>
 <head>
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="style.css" />
     <link rel="bubbly-bg"
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Big+Shoulders+Text&display=swap" rel="stylesheet">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel='stylesheet' href='style.css'>
     <title>DBubbled</title>
 </head>
 
@@ -19,9 +35,33 @@
 </div>
 
 
+
+<style>
+        .night{
+            background: black;
+            color :white;
+    </style>
+    <script>
+        function day(){
+            body.className='style.css';
+        }
+        function night(){
+            body.className='night';
+        }
+    </script>
+</head>
+
+
+
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
+<script  src="function.js"></script>
+
+
+<body id="body">
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <style>
 .dropbtn {
   background-color: #4CAF50;
@@ -59,15 +99,13 @@
 .dropdown:hover .dropbtn {background-color: #3e8e41;}
 </style>
 </head>
-<body>
-
+<body></body>
 
 <div class="dropdown">
   <button class="dropbtn">Hover Over Me</button>
   <div class="dropdown-content">
-    <a href="#">Dark Mode</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
+    <a button type="button" onclick="day()" class="btn">DAY</a>
+    <a button type="button" onclick="night()" class="btn">NIGHT</a>
   </div>
 </div>
 
