--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
                     color: black;
                 }
             </style>
+           
 <head>
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="style.css" />
@@ -21,10 +22,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel='stylesheet' href='style.css'>
     <title>DBubbled</title>
 </head>
 
+<!-- Bubble Maker -->
 <script src="bubbly-bg.js"></script>
 <div id="background-wrap">
     <div class="bubble x1"></div>
@@ -33,9 +36,9 @@
     <div class="bubble x4"></div>
     <div class="bubble x5"></div>
 </div>
+<!-- Bubble Maker END-->
 
-
-
+<!-- Dark Mode -->
 <style>
         .night{
             background: black;
@@ -50,7 +53,7 @@
         }
     </script>
 </head>
-
+<!-- Dark Mode End-->
 
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
@@ -62,12 +65,13 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+
 <style>
 .dropbtn {
   background-color: #4CAF50;
   color: white;
-  padding: 16px;
-  font-size: 16px;
+  padding: 20px;
+  font-size: 20px;
   border: none;
 }
 
@@ -147,7 +151,7 @@
                 meme);
         </script>
         <br>
-<!-- Date & Time-->
+<!-- Date, Time % Weather-->
         <div id="currentTime"></div>
         <div id="date">
             <div class="date"><span id="d"></span> <span id="m"></span> <span id="y"></span></div>
@@ -167,6 +171,9 @@
     </header>
 </div>
     <main>
+<!-- Date, Time % Weather END-->
+
+
 <!-- Personal Section-->
         <section>
             <div class="shadow-box nav-wrapper">
