--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html>
-      
-       
         <style>
                 .night{
                     background: black;
@@ -18,7 +16,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86">
+    <meta name="viewport" content="width=device-width, initial-scale=10.0, maximum-scale=3.0, minimum-scale=0.86">
     <link rel='stylesheet' href='style.css'>
     <title>DBubbled</title>
 </head>
@@ -40,6 +38,9 @@
         .night{
             background: black;
             color :white;
+        }
+        .day{
+            style.css
         }
     </style>
     <script>
